# ai-dial-adapter-dial

./: Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: deploy_dev.yml  upload_image.yml
aidial_adapter_dial/: app.py  transformer.py
aidial_adapter_dial/utils/: app_data.py  dict.py  exceptions.py  log_config.py  reflection.py  sse_stream.py  storage.py  streaming.py
docker-compose/generate-config/: app.py  config.py  requirements.txt
docker-compose/local/: README.md  config_template.json  docker-compose.yml  generate_config_from_listing.sh  generate_config_from_template.sh
tests/: conftest.py
